--- a/styles/main.css
+++ b/styles/main.css
@@ -2,4 +2,22 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+#game {
+  width: 640px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+#game .background {
+  background-color: black;
+  width: 20px;
+  height: 20px;
+}
+#game .snake-body {
+  display: block;
+  background-color: red;
+  width: 20px;
+  height: 20px;
 }/*# sourceMappingURL=main.css.map */
