Can eat food, but timing is off

--- a/styles/main.css
+++ b/styles/main.css
@@ -20,4 +20,9 @@
   background-color: red;
   width: 20px;
   height: 20px;
+}
+#game .food {
+  background-color: green;
+  width: 20px;
+  height: 20px;
 }/*# sourceMappingURL=main.css.map */
