--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -1,25 +1,39 @@
-#game {
-	width: 640px;
-	margin: 0 auto;
+.display {
 	display: flex;
-	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-evenly;
 
-	& .background {
-		background-color: black;
-		width: 20px;
-		height: 20px;
-	}
+	height: 100px;
+}
 
-	& .snake-body {
-		display: block;
-		background-color: red;
-		width: 20px;
-		height: 20px;
-	}
+.main {
+	display: flex;
 
-	& .food {
-		background-color: green;
-		width: 20px;
-		height: 20px;
+	&__game {
+		width: 640px;
+		margin: 0 auto;
+		display: flex;
+		flex-wrap: wrap;
+
+		border: solid 2px white;
+
+		& .background {
+			background-color: black;
+			width: 20px;
+			height: 20px;
+		}
+
+		& .snake-body {
+			display: block;
+			background-color: red;
+			width: 20px;
+			height: 20px;
+		}
+
+		& .food {
+			background-color: green;
+			width: 20px;
+			height: 20px;
+		}
 	}
 }
