--- a/styles/main.css
+++ b/styles/main.css
@@ -1,27 +1,42 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
-#game {
+body {
+  background-color: black;
+  color: white;
+}
+
+.display {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 100px;
+}
+
+.main {
+  display: flex;
+}
+.main__game {
   width: 640px;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
+  border: solid 2px white;
 }
-#game .background {
+.main__game .background {
   background-color: black;
   width: 20px;
   height: 20px;
 }
-#game .snake-body {
+.main__game .snake-body {
   display: block;
   background-color: red;
   width: 20px;
   height: 20px;
 }
-#game .food {
+.main__game .food {
   background-color: green;
   width: 20px;
   height: 20px;
