--- a/styles/main.css
+++ b/styles/main.css
@@ -46,7 +46,7 @@ body {
   display: flex;
 }
 .main__game {
-  width: 600px;
+  width: 400px;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
@@ -62,6 +62,7 @@ body {
   background-color: red;
   width: 20px;
   height: 20px;
+  border-radius: 5px;
 }
 .main__game .food {
   background-color: green;
@@ -144,4 +145,10 @@ body {
   border: solid 1px #6ded8a;
   border-radius: 20px;
   color: white;
+}
+
+@media screen and (min-width: 800px) {
+  .main__game {
+    width: 600px;
+  }
 }/*# sourceMappingURL=main.css.map */
