--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -71,17 +71,7 @@
 }
 
 .scoreBoard {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	width: 350px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	font-family: $font-primary;
-	color: $color-green;
+	display: none;
 
 	.scoreItem {
 		margin-top: 1rem;
@@ -168,8 +158,44 @@
 	width: 400px;
 	margin: 0 auto;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	padding: 1rem 0;
+
+	&__button {
+		font-family: $font-primary;
+		padding: 0.8rem 2rem;
+		background-color: transparent;
+		border: solid 1px $color-green;
+		color: $color-green;
+	}
+}
+
+.loseScreen {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	border: solid 2px red;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	background-color: rgba(0, 0, 0, 0.8);
+
+	&__heading {
+		font-family: $font-primary;
+		color: $color-green;
+		font-size: 2rem;
+		letter-spacing: 10px;
+	}
+
+	&__score {
+		font-family: $font-primary;
+		color: $color-green;
+		margin: 1rem 0;
+	}
 
 	&__button {
 		font-family: $font-primary;
@@ -187,6 +213,21 @@
 		&__game {
 			width: 600px;
 		}
+	}
+
+	.scoreBoard {
+		display: block;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		width: 350px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		font-family: $font-primary;
+		color: $color-green;
 	}
 
 	.controls {
