complete refactor of js, breakdown of css

--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -1,211 +1,14 @@
 @use './variables' as *;
 
-.header {
-	font-family: $font-primary;
-	font-size: 2.4rem;
-	color: $color-green;
-	text-align: center;
-	padding-top: 1.2rem;
-	letter-spacing: 10px;
-	margin-top: 2rem;
-}
+@use './components/header';
+@use './components/display';
+@use './components/mainArea';
+@use './components/scoreboard';
+@use './components/nameArea';
+@use './components/controls';
+@use './components/loseScreen';
 
-.display {
-	display: flex;
-	align-items: center;
-	justify-content: space-evenly;
-	font-family: $font-primary;
-	font-size: 0.6rem;
-
-	height: 60px;
-
-	&__name {
-		&--user {
-			color: $color-green;
-		}
-	}
-
-	&__heading {
-		&--time,
-		&--score {
-			color: $color-green;
-		}
-	}
-}
-
-.main {
-	height: 60vh;
-	display: flex;
-	align-items: center;
-
-	&__game {
-		width: 400px;
-		margin: 0 auto;
-		display: flex;
-		flex-wrap: wrap;
-
-		border: solid 2px white;
-
-		& .background {
-			background-color: black;
-			width: 20px;
-			height: 20px;
-		}
-
-		& .snake-body {
-			display: block;
-			background-color: red;
-			width: 20px;
-			height: 20px;
-			border-radius: 5px;
-			// border-bottom: solid 2px $color-pink;
-		}
-
-		& .food {
-			background-color: green;
-			width: 20px;
-			height: 20px;
-			border-radius: 50%;
-		}
-	}
-}
-
-.scoreBoard {
-	display: none;
-
-	.scoreItem {
-		margin-top: 1rem;
-		list-style: none;
-		padding: 10px 0;
-		color: white;
-	}
-}
-
-.nameArea {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background-color: #232323;
-
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-
-	&__heading {
-		font-family: $font-primary;
-		font-size: 4rem;
-		color: $color-green;
-		letter-spacing: 12px;
-		margin-bottom: 200px;
-	}
-
-	&__input {
-		padding: 0.4rem 1rem;
-		border: none;
-		border-bottom: solid 2px $color-green;
-		background-color: transparent;
-		font-family: $font-primary;
-
-		color: $color-green;
-		letter-spacing: 4px;
-
-		&:focus {
-			outline: none;
-		}
-
-		&--error {
-			border-bottom-color: $color-red;
-		}
-	}
-
-	&__error {
-		font-family: $font-primary;
-		color: $color-red;
-		text-align: center;
-		font-size: 0.6rem;
-		margin-top: 22px;
-		margin-bottom: 2px;
-
-		&--hide {
-			display: none;
-		}
-	}
-
-	&__button {
-		font-family: $font-primary;
-		background-color: transparent;
-		letter-spacing: 12px;
-		border: none;
-		padding: 1rem;
-		border-radius: 25px;
-		color: $color-green;
-		border: solid 1px $color-green;
-		cursor: pointer;
-		transition: background-color ease 800ms;
-		margin-top: 20px;
-
-		&:hover {
-			background-color: rgba($color-green, 0.6);
-			color: white;
-		}
-	}
-}
-
-.controls {
-	width: 400px;
-	margin: 0 auto;
-	display: flex;
-	justify-content: center;
-	padding: 1rem 0;
-
-	&__button {
-		font-family: $font-primary;
-		padding: 0.8rem 2rem;
-		background-color: transparent;
-		border: solid 1px $color-green;
-		color: $color-green;
-	}
-}
-
-.loseScreen {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	border: solid 2px red;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-
-	background-color: rgba(0, 0, 0, 0.8);
-
-	&__heading {
-		font-family: $font-primary;
-		color: $color-green;
-		font-size: 2rem;
-		letter-spacing: 10px;
-	}
-
-	&__score {
-		font-family: $font-primary;
-		color: $color-green;
-		margin: 1rem 0;
-	}
-
-	&__button {
-		font-family: $font-primary;
-		padding: 0.8rem 2rem;
-		background-color: transparent;
-		border: solid 1px $color-green;
-		color: $color-green;
-	}
-}
-
+// Media Queries
 @media screen and (min-width: 800px) {
 	.main {
 		height: 75vh;
