--- a/styles/_reset.scss
+++ b/styles/_reset.scss
@@ -1,5 +1,5 @@
 * {
 	margin: 0;
 	padding: 0;
-	// box-sizing: border-box; // BUG - This being on breaks the way the snake moves 🤯
+	box-sizing: border-box;
 }
