--- a/styles/components/_display.scss
+++ b/styles/components/_display.scss
@@ -1,24 +1,12 @@
 @use '../variables' as *;
 
 .display {
+	width: 600px;
+	margin: 20px 0;
 	display: flex;
-	align-items: center;
-	justify-content: space-evenly;
+	justify-content: space-between;
+
 	font-family: $font-primary;
-	font-size: 0.6rem;
-
-	height: 60px;
-
-	&__name {
-		&--user {
-			color: $color-green;
-		}
-	}
-
-	&__heading {
-		&--time,
-		&--score {
-			color: $color-green;
-		}
-	}
+	font-size: 0.8rem;
+	color: $color-green;
 }
