--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,11 +1,9 @@
 @use '../variables' as *;
 
 .header {
+	font-size: 4rem;
 	font-family: $font-primary;
-	font-size: 2.4rem;
 	color: $color-green;
 	text-align: center;
-	padding-top: 1.2rem;
-	letter-spacing: 10px;
-	margin-top: 2rem;
+	margin: 2rem 0;
 }
