--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -1,5 +1,12 @@
 .main {
 	width: 100%;
 	display: flex;
+	flex-direction: column;
 	justify-content: space-between;
+}
+
+@media screen and (min-width: 799px) {
+	.main {
+		flex-direction: row;
+	}
 }
