--- a/styles/components/_scoreboard.scss
+++ b/styles/components/_scoreboard.scss
@@ -1,17 +1,16 @@
 @use '../variables' as *;
 
 .scoreBoard {
-	// display: none;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-evenly;
-
+	gap: 0.6rem;
 	font-family: $font-primary;
 
 	&__header {
-		font-size: 2rem;
+		font-size: 1.4rem;
 		color: $color-green;
+		margin-top: 1rem;
 	}
 
 	&__item {
@@ -21,6 +20,26 @@
 
 		&:nth-child(2n + 1) {
 			color: $color-green;
+		}
+
+		&--hide {
+			display: none;
+		}
+	}
+}
+
+@media screen and (min-width: 799px) {
+	.scoreBoard {
+		justify-content: space-evenly;
+
+		&__header {
+			font-size: 2rem;
+		}
+
+		&__item {
+			&--hide {
+				display: inherit;
+			}
 		}
 	}
 }
