--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,7 @@
 
 body {
   background-color: #494949;
+  overflow: hidden;
 }
 
 .container {
@@ -19,15 +20,21 @@ body {
 }
 
 .display {
-  width: 600px;
+  width: 100vw;
   margin: 20px 0;
   display: flex;
   justify-content: space-between;
   font-family: "Press Start 2P", cursive;
   font-size: 0.8rem;
   color: #6ded8a;
+  padding: 0 1rem;
 }
 
+@media screen and (min-width: 799px) {
+  .display {
+    width: 600px;
+  }
+}
 .canvas {
   border: solid 2px #ed3833;
 }
@@ -35,9 +42,15 @@ body {
 .main {
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
+@media screen and (min-width: 799px) {
+  .main {
+    flex-direction: row;
+  }
+}
 .header {
   font-size: 4rem;
   font-family: "Press Start 2P", cursive;
@@ -50,12 +63,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  gap: 0.6rem;
   font-family: "Press Start 2P", cursive;
 }
 .scoreBoard__header {
-  font-size: 2rem;
+  font-size: 1.4rem;
   color: #6ded8a;
+  margin-top: 1rem;
 }
 .scoreBoard__item {
   list-style: none;
@@ -65,7 +79,21 @@ body {
 .scoreBoard__item:nth-child(2n+1) {
   color: #6ded8a;
 }
+.scoreBoard__item--hide {
+  display: none;
+}
 
+@media screen and (min-width: 799px) {
+  .scoreBoard {
+    justify-content: space-evenly;
+  }
+  .scoreBoard__header {
+    font-size: 2rem;
+  }
+  .scoreBoard__item--hide {
+    display: inherit;
+  }
+}
 .loseScreen {
   position: absolute;
   top: 0;
@@ -128,16 +156,23 @@ body {
 .nameArea__input:focus {
   outline: none;
 }
-.nameArea__error {
+.nameArea__color {
+  display: flex;
+  align-items: center;
+  color: #6ded8a;
   font-family: "Press Start 2P", cursive;
-  color: #ed3833;
-  text-align: center;
-  font-size: 0.6rem;
-  margin-top: 22px;
-  margin-bottom: 2px;
 }
-.nameArea__error--hide {
-  display: none;
+.nameArea__color--select {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  color: #6ded8a;
+  padding: 1rem;
+  font-family: "Press Start 2P", cursive;
+}
+.nameArea__option {
+  background: green;
+  padding: 1rem;
 }
 .nameArea__button {
   font-family: "Press Start 2P", cursive;
@@ -155,4 +190,10 @@ body {
 .nameArea__button:hover {
   background-color: rgba(109, 237, 138, 0.6);
   color: white;
+}
+
+.theme {
+  position: absolute;
+  top: 0;
+  right: 0;
 }/*# sourceMappingURL=main.css.map */
