--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -3,6 +3,8 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	align-items: center;
+	padding: 0 1rem;
 }
 
 @media screen and (min-width: 799px) {
