--- a/styles/components/_scoreboard.scss
+++ b/styles/components/_scoreboard.scss
@@ -4,8 +4,10 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 0.6rem;
+	gap: 2rem;
+	padding: 1rem;
 	font-family: $font-primary;
+	background-color: rgba(black, 0.3);
 
 	&__header {
 		font-size: 1.4rem;
