--- a/styles/main.css
+++ b/styles/main.css
@@ -6,12 +6,13 @@
 }
 
 body {
-  background-color: #494949;
-  overflow: hidden;
+  background-image: url("../assets/images/sunrise-minecraft.jpg");
+  background-size: auto; /* <------ */
+  background-repeat: no-repeat;
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 1100px;
   margin: 0 auto;
 }
 
@@ -19,6 +20,11 @@ body {
   display: none !important;
 }
 
+@media screen and (max-width: 1000px) {
+  .container {
+    max-width: 1000px;
+  }
+}
 .display {
   width: 100vw;
   margin: 20px 0;
@@ -44,6 +50,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+  padding: 0 1rem;
 }
 
 @media screen and (min-width: 799px) {
@@ -63,8 +71,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 0.6rem;
+  gap: 2rem;
+  padding: 1rem;
   font-family: "Press Start 2P", cursive;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 .scoreBoard__header {
   font-size: 1.4rem;
